@@ -90,7 +90,12 @@ namespace Rcpp{
     template <typename T> T as( SEXP m_sexp) {
         return internal::as<T>( m_sexp, typename traits::r_type_traits<T>::r_category() ) ;
     }
-
+    
+    template <typename T> 
+    inline typename traits::remove_const_and_reference<T>::type bare_as( SEXP m_sexp ){
+        return as< typename traits::remove_const_and_reference<T>::type >( m_sexp ) ;
+    }
+    
     template<> inline SEXP as(SEXP m_sexp) { return m_sexp ; }
 
 } // Rcpp 
